# de-project-course

./: .env.example  README.md  docker-compose-local.yml  docker-compose-mysql.yml  docker-compose-producer.yml  docker-compose-worker.yml  docker-compose.yml  pyproject.toml
data_ingestion/: bigquery.py  config.py  hahow_bigquery_data_transform.py  hahow_sync_mysql_to_bigquery.py  mysql.py  tasks_crawler_hahow_article.py  tasks_crawler_hahow_course.py  worker.py
